1.9/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
  - port: 4321
    protocol: TCP
    targetPort: 3000
